# core

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: main.rs
src/ai/: AGENTS.md  embeddings.rs  llm.rs  mod.rs  ollama.rs  providers.rs  rag.rs  search.rs
src/audio/: mod.rs
src/dataview/: mod.rs
src/epub/: mod.rs
src/git/: mod.rs
src/highlights/: mod.rs
src/integrations/: gcal.rs  hoarder.rs  kindle.rs  mod.rs  readwise.rs  todoist.rs  wallabag.rs
src/labels/: mod.rs
src/newsletter/: mod.rs
src/nlp/: mod.rs
src/pdf/: mod.rs
src/periodic/: mod.rs
src/reading/: mod.rs
src/rpc/: methods.rs  mod.rs  server.rs  types.rs
src/rss/: mod.rs
src/spaced_repetition/: algorithm.rs  frequency.rs  mastery.rs  mod.rs  session.rs  stats.rs
src/tables/: mod.rs
src/tasks/: mod.rs
src/tier/: limits.rs  middleware.rs  mod.rs  usage.rs
src/tts/: mod.rs
src/utils/: calculator.rs  datetime.rs  emoji.rs  favorites.rs  history.rs  layouts.rs  links.rs  mod.rs  snippets.rs  vault.rs
src/web_clip/: mod.rs
src/youtube/: mod.rs
