[package]
name = "naidis-core"
version = "0.1.0"
edition = "2021"
description = "Naidis Core Engine - Rust JSON-RPC server for AI/PDF/YouTube/RSS processing"
license = "MIT"
repository = "https://github.com/naidis/core"
authors = ["Naidis Team"]

[dependencies]
# JSON-RPC
jsonrpsee = { version = "0.24", features = ["server"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# RSS parsing
feed-rs = "2"

# Search index
tantivy = "0.22"

# CLI
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "naidis-core"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
