[package]
name = "naidis-core"
version = "0.1.0"
edition = "2021"
description = "Naidis Core - Backend engine for Obsidian Unified Launcher"
license = "MIT"
repository = "https://github.com/naidis/core"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.12", features = ["json"] }
scraper = "0.21"
readability = "0.3"
url = "2.5"

feed-rs = "2.3"
chrono = { version = "0.4", features = ["serde"] }

pdf-extract = "0.7"
lopdf = "0.34"

fastembed = "4"
tempfile = "3"
dirs = "5"
uuid = { version = "1", features = ["v4"] }

candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
hf-hub = "0.3"
tokenizers = "0.21"

thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
futures = "0.3"
regex = "1.11"
base64 = "0.22"
meval = "0.2"
emojis = "0.6"

axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4", features = ["derive"] }
urlencoding = "2.1"
epub = "2.1"
async-imap = "0.10"
async-native-tls = "0.5"
async-std = { version = "1.13", features = ["attributes"] }
mailparse = "0.15"
html2text = "0.12"
ollama-rs = { version = "0.3", features = ["stream"] }
whisper-rs = "0.12"
hound = "3.5"

[[bin]]
name = "naidis-core"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
